[gd_scene load_steps=21 format=3 uid="uid://dco4wvqkly563"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_51rux"]
[ext_resource type="Texture2D" uid="uid://c5r01kykbnnhd" path="res://scenes/game_object/player/player.png" id="1_w7kc3"]
[ext_resource type="PackedScene" uid="uid://b0xoghkyeg3fu" path="res://scenes/component/velocity_component.tscn" id="2_855tn"]
[ext_resource type="PackedScene" uid="uid://cyi2uk4x0f8ff" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_gf0th"]
[ext_resource type="PackedScene" uid="uid://rivt7p1rl50f" path="res://scenes/component/health_component.tscn" id="2_keg1j"]
[ext_resource type="Script" path="res://scenes/game_object/player/controller.gd" id="2_xclso"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sensors/sensors_2d/RaycastSensor2D.gd" id="3_26652"]
[ext_resource type="PackedScene" uid="uid://cccdggom8bvr4" path="res://scenes/component/random_stream_player_2d_component.tscn" id="5_lmrsp"]
[ext_resource type="AudioStream" uid="uid://b85f05vi7j7x8" path="res://assets/audio/impactMining_000.ogg" id="6_n6xxj"]
[ext_resource type="AudioStream" uid="uid://crgivjm0m66y6" path="res://assets/audio/impactMining_001.ogg" id="7_oslpi"]
[ext_resource type="AudioStream" uid="uid://iwjkg821b8db" path="res://assets/audio/impactMining_002.ogg" id="8_a2nec"]
[ext_resource type="AudioStream" uid="uid://cgvvunmyvp3wx" path="res://assets/audio/impactMining_003.ogg" id="9_j60bx"]
[ext_resource type="AudioStream" uid="uid://cpceknhy1yv87" path="res://assets/audio/impactMining_004.ogg" id="10_exw86"]

[sub_resource type="Animation" id="Animation_4xe71"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6bo6s"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.784584, 2.63902, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tw08a"]
_data = {
"RESET": SubResource("Animation_4xe71"),
"walk": SubResource("Animation_6bo6s")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e4f2"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_8pvp4"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m7cyv"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fersf"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_51rux")

[node name="AIController2D" type="Node2D" parent="." groups=["AGENT"]]
process_mode = 3
script = ExtResource("2_xclso")

[node name="EnemySensor" type="Node2D" parent="."]
script = ExtResource("3_26652")
collision_mask = 12
collide_with_areas = true

[node name="PickupSensor" type="Node2D" parent="."]
script = ExtResource("3_26652")
collision_mask = 48
collide_with_areas = true

[node name="TerrainSensor" type="Node2D" parent="."]
rotation = 0.785398
script = ExtResource("3_26652")
n_rays = 4.0
ray_length = 135

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tw08a")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_855tn")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_keg1j")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_gf0th")]

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("5_lmrsp")]
streams = Array[AudioStream]([ExtResource("6_n6xxj"), ExtResource("7_oslpi"), ExtResource("8_a2nec"), ExtResource("9_j60bx"), ExtResource("10_exw86")])

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_1e4f2")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_8pvp4")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_w7kc3")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_m7cyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_fersf")
